--- a/In-class_Ex/In-class_Ex01/In-class_Ex01.qmd
+++ b/In-class_Ex/In-class_Ex01/In-class_Ex01.qmd
@@ -16,6 +16,8 @@ format:
     code-summary: "Show the code"
     code-line-numbers: true
     code-block-bg: "#ECEBEB"
+    code-block-border-left: "#919C9D"
+    code-block-border-left-size: 1px
 ---
 
 ![](Images/placeholder.PNG){fig-align="center"}
